Added top hit finder

--- a/CosmicFinder/config/dummy.cfg
+++ b/CosmicFinder/config/dummy.cfg
@@ -6,6 +6,6 @@ ERAlgoToy : {
 
 ERAlgoCosmicAnalyzer : {
   spill_start : 0.
-  spill_end : 1700000.
-  verbosity : true
+  spill_end : 1700.
+  verbosity : false
 }
